[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
jubu_datastore = "."

[tool.setuptools]
packages = ["jubu_datastore", "jubu_datastore.dto", "jubu_datastore.common", "jubu_datastore.logging", "jubu_datastore.models", "jubu_datastore.loaders"]

[project]
name = "jubu_datastore"
version = "0.1.0"
description = "Shared datastore layer for Jubu"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy",
    "cryptography",
    "loguru",
    "pydantic[email]",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]
